# hydrate

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Manual-Gui.docx  README.md  pyproject.toml  setup.py  test_3d_rect_intersec.py  zml.py  zml_ui.pyw  zml_ui_safe.pyw
.claude/commands/: commit.md  release.md  squash.md  test.md
zmlx/: Manual-Gui.docx  ReadMe.MD  ReadMe.md  __init__.py  __main__.py
zmlx/__Trash/: FdyConfig.py
zmlx/alg/: ReadMe.md  Vector.py  __init__.py  _code_config.py  _extract_comments.py  _slowdown.py  _startfile.py  alpha.py  append_file.py  apply_async.py  apply_threads.py  base.py  change_fmt.py  clamp.py  code_config.py  convert_png_to_jpg.py  count_lines.py  create_interp1d.py  create_shortcut.py  create_ui_lnk_on_desktop.py  crop_image.py  deprecated_func.py  dfn_v3.py  disc3_intersect_cube.py  divide_list.py  fig2matrix.py  frac.py  fsize2str.py  fsys.py  get_cells_around_seg.py  get_desktop_path.py  get_faces_across.py  get_faces_around_seg.py  get_frac_cond.py  get_frac_width.py  get_numpy_array_pointer.py  get_outcrop.py  get_point_distance.py  get_pythonw_path.py  get_seg_point_distance.py  (+65 more)
zmlx/alpha/: seepage.py  stiffness_qua4.py  stiffness_triangle.py
zmlx/base/: ReadMe.md  __init__.py  around_seg.py  faces_across.py  frac.py  has_cells.py  ip.py  pos_keeper.py  seepage.py  vector.py  zml.py
zmlx/config/: ReadMe.md  TherFlowConfig.py  __init__.py  adjust_vis.py  attr_keys.py  capillary.py  co2.py  cond.py  diffusion.py  flu_buffer.py  fluid.py  fluid_heating.py  frac.py  fracture_network2.py  fracture_rc3.py  heavy_oil.py  hydrate.py  hydrate_v2.py  icp.py  injector.py  japan13.py  prod.py  sand.py  sand_diss.py  seepage.py  seepage_base.py  seepage_face.py  set_fludefs.py  settle.py  slots.py  solid_buffer.py  standard_slots.py  step_iteration.py  timer.py
zmlx/data/: ReadMe.MD  __init__.py  dep.py  example.fn2  example_fn2.py  get_path.py  igg.py  path.py  surf.py  trimesh_test.py
zmlx/demo/: BsccCloud.py  Capillary.py  GasMig.py  HydForm.py  HydProd_H2.py  IP.py  LiqInj.py  ReadMe.md  SpringSys.py  Test.py  Ther.py  Ther_Cfg.py  Timer.py  __init__.py  __main__.py  async.py  bscc_cloud.py  case_11.py  case_12.py  case_13.py  co2.py  co2_disp.py  dfn_v3.py  egs2.py  fem2.py  fem3.py  flow1.py  foam_inj.py  fracture_stress.py  gas_mig.py  geothermal.py  get_path.py  hf2.py  hyd_form.py  hyd_form_co2.py  hyd_form_mix.py  hyd_prod_h2.py  hyd_prod_nl2.py  hyd_prod_nl3.py  hyd_prod_v2.py  (+14 more)
zmlx/deprecated/: hydrate.py
zmlx/ext/: fill_01.cpp  fill_01.py
zmlx/exts/: ReadMe.md  __init__.py  __main__.py  _ary.py  _coord.py  _dll.py  _dyn.py  _fmap.py  _frac.py  _hk.py  _interp.py  _ip.py  _lexpr.py  _lic.py  _map.py  _mat.py  _mesh.py  _pool.py  _seepage.py  _sol.py  _str.py  _tensor.py  _timer.py  _utils.py  _vec.py  _ver.py  base.py  beta.py  build.sh  check_so.py  dsmc.cpp  dsmc.py  fill_01.py  frac.cpp  frac.py  heavy_oil.cpp  heavy_oil.py  vector.py
zmlx/fem/: ReadMe.md  __init__.py  alg.py  alg_xy.py  attr_getter.py  boundary.py  compute_face_stiff2.py  create2.py  create3.py  cube2tet.py  dyn.py  find_boundary.py  mesh_utils.py  qua4.py  set_mas.py  set_mass.py  stiff2.py  stiff3.py  stiffness_qua4.py  stiffness_tet4.py  stiffness_triangle.py  xy.py  xyz.py
zmlx/fig/: __init__.py  _item.py  _on_ax.py  _on_fig.py  _plt.py  data.py
zmlx/filesys/: ReadMe.md  __init__.py  change_fmt.py  count_lines.py  first_only.py  get_last_file.py  get_latest_file.py  get_lines.py  get_size_mb.py  has_permission.py  in_directory.py  items.py  join_paths.py  list_code_files.py  list_files.py  make_dirs.py  make_fname.py  make_fpath.py  make_parent.py  opath.py  path.py  prepare_dir.py  samefile.py  show_fileinfo.py  tag.py
zmlx/fluid/: Ca(OH)2.py  CaO.py  CaOH.py  ReadMe.MD  ReadMe.md  __init__.py  _aqueous.py  _mixture.py  alg.py  aqueous_density_linearity.md  ch4.py  ch4_hydrate.py  ch4_hydrate_th.py  char.py  co2_hydrate.py  co2_liq.py  from_data.py  from_file.py  h2o.py  h2o_ice.py  kerogen.py  oil.py  solution.py  (+1 more)
(+1400 files in other folders)
