# pyproject.toml - PEP 621 compliant configuration
# Supported OS: Windows 10/11, Ubuntu

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IggHydrate"
version = "1.6.16"
description = "IggHydrate - Comprehensive hydrate simulation tool (import as 'zmlx', conflicts with other zmlx packages - uninstall them first)"
authors = [
    { name = "Zhaobin Zhang", email = "zhangzhaobin@mail.iggcas.ac.cn" }
]
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Visualization",
]

# Core dependencies (cross-platform)
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyqtgraph",
    "PyOpenGL",
    "dulwich",
    "pillow",
    "pyvista",
    "pyvistaqt",
    "vtk",
    "pandas",
    "openpyxl",
    # PyQt6 for Python >= 3.8 (preferred)
    "PyQt6",
    "PyQt6-WebEngine",
    "pyqt6-qscintilla",
]

[project.optional-dependencies]
# Platform-specific dependencies
windows = ["pywin32"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "*tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Include all files in zmlx directory
"zmlx" = ["**/*"]